--- a/house.gov.by/8b5ca28f81b46336cbf4376e4824fa6d31e21f74.yml
+++ b/house.gov.by/8b5ca28f81b46336cbf4376e4824fa6d31e21f74.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 20:23:41 GMT
+    - Sun, 05 Nov 2017 13:20:55 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=rsbafkeo7i9to9s64nanl4teg2; path=/
+    - PHPSESSID=7lsk21ojliop9l4v43882qi7u5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 20:23:42 GMT
+recorded_at: Sun, 05 Nov 2017 13:20:57 GMT
