--- a/house.gov.by/16d2a05b3da8a01604c1109b98ec431c66f25d8d.yml
+++ b/house.gov.by/16d2a05b3da8a01604c1109b98ec431c66f25d8d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 20:52:27 GMT
+    - Sun, 05 Nov 2017 13:48:19 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=hfpt9sjindtd4sbfdb2s0o6og7; path=/
+    - PHPSESSID=uv32lg3v9a71eoerrs5ht5s5e1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 20:52:27 GMT
+recorded_at: Sun, 05 Nov 2017 13:48:20 GMT
