--- a/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
+++ b/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 20:05:04 GMT
+    - Sun, 05 Nov 2017 13:58:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=j2enah2fl9qs8k8oa91rh4qne4; path=/
+    - PHPSESSID=66st78favlkc68mb0e73h4j0f6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 20:05:04 GMT
+recorded_at: Sun, 05 Nov 2017 13:58:42 GMT
