--- a/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
+++ b/house.gov.by/71fb5731d3fdf8b08db7b112a5a1fefb5d1ecc0c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 18:29:01 GMT
+    - Sun, 05 Nov 2017 14:10:27 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=nloj65n46mqunlbm3sd6noaav3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 18:29:01 GMT
+recorded_at: Sun, 05 Nov 2017 14:10:28 GMT
