--- a/house.gov.by/f41f444c7a764ed71f281b666413f647e81275cf.yml
+++ b/house.gov.by/f41f444c7a764ed71f281b666413f647e81275cf.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sat, 04 Nov 2017 20:53:11 GMT
+    - Sun, 05 Nov 2017 14:20:59 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=cf9dhghjcm8ca3vlmbs7e2vcc1; path=/
+    - PHPSESSID=2n4d53bh0c1qgipgh1pr81nl66; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 04 Nov 2017 20:53:12 GMT
+recorded_at: Sun, 05 Nov 2017 14:21:01 GMT
