--- a/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
+++ b/house.gov.by/87f447c456f26f395fa11ed8a0d87ee14576be22.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 14:29:34 GMT
+    - Sun, 05 Nov 2017 14:44:06 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=c82b7i50pr9du70hdbi1p2t5e1; path=/
+    - PHPSESSID=aieqk37t017c910to0mguuv8v6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 14:29:35 GMT
+recorded_at: Sun, 05 Nov 2017 14:44:06 GMT
