--- a/house.gov.by/c957607734c36b65ed912c3bd24f9437a6533d0a.yml
+++ b/house.gov.by/c957607734c36b65ed912c3bd24f9437a6533d0a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 14:05:39 GMT
+    - Sun, 05 Nov 2017 15:40:22 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=i3iuk1r7detc38e39ebuniu7s7; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 14:05:40 GMT
+recorded_at: Sun, 05 Nov 2017 15:40:22 GMT
