--- a/house.gov.by/16d2a05b3da8a01604c1109b98ec431c66f25d8d.yml
+++ b/house.gov.by/16d2a05b3da8a01604c1109b98ec431c66f25d8d.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 13:48:19 GMT
+    - Sun, 05 Nov 2017 15:42:31 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=uv32lg3v9a71eoerrs5ht5s5e1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 13:48:20 GMT
+recorded_at: Sun, 05 Nov 2017 15:42:31 GMT
