--- a/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
+++ b/house.gov.by/3c84851aacd98293a2e688314ec0dc4e23fb97e1.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 12:53:14 GMT
+    - Sun, 05 Nov 2017 15:53:38 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=g3dc43srajk84dmvnj2jkrlts0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 12:53:14 GMT
+recorded_at: Sun, 05 Nov 2017 15:53:39 GMT
