--- a/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
+++ b/house.gov.by/3d07e35244747efde8f8b9a3aa7e65d29bf715ed.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 12:54:05 GMT
+    - Sun, 05 Nov 2017 16:08:33 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=pb33msru4nmf96hnpp1m2dc3g3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 12:54:05 GMT
+recorded_at: Sun, 05 Nov 2017 16:08:34 GMT
