--- a/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
+++ b/house.gov.by/e0bfa57e716611ea6eacdda6cc645de1d148b08c.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 13:33:36 GMT
+    - Sun, 05 Nov 2017 16:12:17 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=41ujihqoau0cvknn3596i35qn3; path=/
+    - PHPSESSID=fit9vfg56n8mucgr7v7bnth2q3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 13:33:37 GMT
+recorded_at: Sun, 05 Nov 2017 16:12:18 GMT
