--- a/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
+++ b/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 13:44:48 GMT
+    - Sun, 05 Nov 2017 16:21:24 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=u8f4rln25lmommvj819psi5kn3; path=/
+    - PHPSESSID=p98b1e2q6k7gkskhmc3cctdkj5; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 13:44:48 GMT
+recorded_at: Sun, 05 Nov 2017 16:21:25 GMT
