--- a/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
+++ b/house.gov.by/d873b2a79688823a0d023468255a348ebe0af01e.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 15:19:32 GMT
+    - Sun, 05 Nov 2017 16:25:03 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=9e5ppsse0l3940ov73c55ibi05; path=/
+    - PHPSESSID=timpnu8adsdvarq25alrbrjkl2; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 15:19:34 GMT
+recorded_at: Sun, 05 Nov 2017 16:25:03 GMT
