--- a/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
+++ b/house.gov.by/cfd30729c5aa2b5af72e0e2251bb4620a2d190bb.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 15:04:51 GMT
+    - Sun, 05 Nov 2017 16:26:21 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=01ffclemkp3pfdniib1jc9h620; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 15:04:51 GMT
+recorded_at: Sun, 05 Nov 2017 16:26:22 GMT
