--- a/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
+++ b/house.gov.by/5a4f6091558c47424aececa0159e0fca59f54d7a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:21:24 GMT
+    - Sun, 05 Nov 2017 16:27:29 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=p98b1e2q6k7gkskhmc3cctdkj5; path=/
+    - PHPSESSID=vgrtdtre1odnvumsjcicr86td0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:21:25 GMT
+recorded_at: Sun, 05 Nov 2017 16:27:30 GMT
