--- a/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
+++ b/house.gov.by/61d2fb337605ce0e5df6b86e1c8c104dbc74308a.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 14:41:28 GMT
+    - Sun, 05 Nov 2017 16:39:40 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=7g2uef4sre12ntkkb6k44838a3; path=/
+    - PHPSESSID=fmtnkmir25n36ng8sebjcfcvs1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 14:41:29 GMT
+recorded_at: Sun, 05 Nov 2017 16:39:40 GMT
