--- a/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
+++ b/house.gov.by/a5a73b7476d4a0a00805b19eabbfecbb25c828a5.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:19:38 GMT
+    - Sun, 05 Nov 2017 16:55:51 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,8 +29,6 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
-    Set-Cookie:
-    - PHPSESSID=6h3on6ii3nmclkp4jq391h90o0; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +40,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - HIT
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:19:39 GMT
+recorded_at: Sun, 05 Nov 2017 16:55:52 GMT
