--- a/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
+++ b/house.gov.by/60249ac0ab8af23b7af7ee29503a44f7985e4de9.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:15:53 GMT
+    - Sun, 05 Nov 2017 16:58:21 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=j4s2ah3oen07r2akp15suk8e92; path=/
+    - PHPSESSID=9b7esko4argmr89p6nb80g6ph1; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - MISS
+    - EXPIRED
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:15:55 GMT
+recorded_at: Sun, 05 Nov 2017 16:58:21 GMT
