--- a/house.gov.by/79ac58f5db031f00c3995cc55eddcd365e200256.yml
+++ b/house.gov.by/79ac58f5db031f00c3995cc55eddcd365e200256.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 15:24:56 GMT
+    - Sun, 05 Nov 2017 17:02:14 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=m82dkcnc9rjhmn2973od10p2m4; path=/
+    - PHPSESSID=99954cnr8f04ifk52o7qqmod81; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 15:24:57 GMT
+recorded_at: Sun, 05 Nov 2017 17:02:15 GMT
