--- a/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
+++ b/house.gov.by/f046772073a7c8c34da7ca236e04b15050649385.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:01:45 GMT
+    - Sun, 05 Nov 2017 17:02:44 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -30,7 +30,7 @@ response:
     Vary:
     - Accept-Encoding
     Set-Cookie:
-    - PHPSESSID=hm52l91lel98g3ik5okgadmfo3; path=/
+    - PHPSESSID=kgua9e83nm28od4n3j5cqbuki3; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -42,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - EXPIRED
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:01:47 GMT
+recorded_at: Sun, 05 Nov 2017 17:02:46 GMT
