--- a/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
+++ b/house.gov.by/daaa73805e9fe148233c94c1671cd7492cf1b742.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 15:23:48 GMT
+    - Sun, 05 Nov 2017 17:13:25 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=29kfe05u3nrldoga60b3647lp6; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - UPDATING
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 15:23:48 GMT
+recorded_at: Sun, 05 Nov 2017 17:13:26 GMT
