--- a/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
+++ b/house.gov.by/20e69e40d1db804e6053e5d915542e98be8ae879.yml
@@ -20,7 +20,7 @@ response:
     Server:
     - nginx
     Date:
-    - Sun, 05 Nov 2017 16:00:13 GMT
+    - Sun, 05 Nov 2017 17:30:10 GMT
     Content-Type:
     - text/html; charset=UTF-8
     Transfer-Encoding:
@@ -29,6 +29,8 @@ response:
     - keep-alive
     Vary:
     - Accept-Encoding
+    Set-Cookie:
+    - PHPSESSID=9rbga6oofv99frq798925ua872; path=/
     Expires:
     - Thu, 19 Nov 1981 08:52:00 GMT
     Cache-Control:
@@ -40,10 +42,10 @@ response:
     X-Frame-Options:
     - SAMEORIGIN
     X-Fastcgi-Cache:
-    - HIT
+    - MISS
     Access-Control-Allow-Origin:
     - "*"
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 05 Nov 2017 16:00:13 GMT
+recorded_at: Sun, 05 Nov 2017 17:30:11 GMT
